fix links and titles on mobile

--- a/style.css
+++ b/style.css
@@ -268,10 +268,6 @@ a:visited {
   .tech-stack-slideshow {
     width: 90vw;
   }
-  .main-title,
-  .main-section .link {
-    font-size: 1.5rem;
-  }
   .profile-img {
     box-shadow: -0.5vh -0.5vh 0 0 var(--accent-color);
     border: 1vh solid black;
